--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="https://datingthreads.online/pr/pr1.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <title>Instalive 🔞</title>
+    <title>Sophia LIVE🟢🔞</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Arial, sans-serif; }
@@ -81,11 +81,6 @@
         <div class="online-counter">
             <span class="dot"></span>
             <span class="count">423 people online now</span>
-        </div>
-
-        <!-- Search Bar -->
-        <div class="search-bar">
-            <input type="text" placeholder="Search for hot profiles...">
         </div>
 
         <!-- Stories -->
