--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
     <div class="container" id="mainContainer">
         <!-- Header -->
         <div class="header">
-            <img src="https://starimg.ru/uploads/dc7a9992d1.webp" alt="Logo">
-            <span>Instalive</span>
+            <span>Sophia LIVE🟢🔞</span>
             <i class="fas fa-comment"></i>
         </div>
 
