--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container" id="mainContainer">
         <!-- Header -->
         <div class="header">
-            <span>Sophia LIVE🟢🔞</span>
+            <span>Sophia LIVE🔞</span>
             <i class="fas fa-comment"></i>
         </div>
 
